# goBarcodeQrSDK

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  README.md.REMOTE.md  bridge.c  bridge.def  bridge.h  go.mod  goBarcodeQrSDK_test.go  reader.go  run_linux_test.sh  run_mac_test.sh  run_windows_test.ps1
.github/workflows/: build.yml  nightly.yml  release.yml  test-pr.yml
BarcodeReader/: BarcodeReader.go
dbr/: dbr.c  dbr.go  dbr.i  dbr_wrap.c
dbr/include/: BarcodeFormat.h  BarcodeStructs.h  CommonConfig.h  ErrorCode.h  ExportDefines.h  If_DBR.h  If_DBRP.h
dcv/include/: DynamsoftBarcodeReader.h  DynamsoftCaptureVisionRouter.h  DynamsoftCodeParser.h  DynamsoftCore.h  DynamsoftDocumentNormalizer.h  DynamsoftImageProcessing.h  DynamsoftLabelRecognizer.h  DynamsoftLicense.h  DynamsoftUtility.h  bridge.h
dcv/lib/mac/: libDynamsoftCaptureVisionRouter.dylib  libDynamsoftCodeParser.dylib  libDynamsoftCodeParserDedicator.dylib  libDynamsoftCore.dylib  libDynamsoftNeuralNetwork.dylib  libDynamsoftUtility.dylib  libbridge.dylib
dcv/lib/win/: DynamsoftBarcodeReaderx64.lib  DynamsoftCaptureVisionRouterx64.lib  DynamsoftCodeParserx64.lib  DynamsoftCorex64.lib  DynamsoftDocumentNormalizerx64.lib  DynamsoftImageProcessingx64.lib  DynamsoftLabelRecognizerx64.lib  DynamsoftLicensex64.lib  DynamsoftUtilityx64.lib
dcv/lib/win/Release/: bridge_static.lib
example/: Dockerfile  README.md  go.mod  go.sum  test.go
example/command-line/: README.md  go.mod  go.sum  run_linux.sh  run_mac.sh  run_windows.ps1  test.go
example/web/: README.md  go.mod  go.sum  main.go  run_linux.sh  run_mac.sh  run_windows.ps1  template.json
example/web/static/: index.html  main.js
lib/: bridge.c
lib/bridge/: CMakeLists.txt  README.md  bridge.cpp  bridge.h
scripts/: check-actions.ps1  check-actions.sh  local-ci-check.ps1  local-ci-check.sh  prepare-ci.ps1  prepare-ci.sh
src/: bridge.cpp
